fix: navbar brand resizes on mobile view

--- a/src/components/ui/navbar/Navbar.css
+++ b/src/components/ui/navbar/Navbar.css
@@ -47,7 +47,7 @@
 
 .navbar__toggle-btn {
   position: absolute;
-  top: 3rem;
+  top: 2rem;
   right: 1rem;
   display: flex;
   flex-direction: column;
